ajaxカートページ

--- a/price_comparison.html
+++ b/price_comparison.html
@@ -15,6 +15,7 @@
 <body>
     <div id="container">
         <div class="header">いろいろな商品を比較！</div>
+        <!-- <p><a href="price_comparison_cart.php" target="_blank" rel="noopener noreferrer">カートを見る</a></p> -->
         <p><a href="price_comparison_cart.php">カートを見る</a></p>
         <!--<form method='post' action=''>-->
         <form action method="get">
