広告の追加とgitignore

--- a/price_comparison.html
+++ b/price_comparison.html
@@ -10,6 +10,11 @@
     <meta name="Keywords" content="">
     <meta name="Description" content="">
     -->
+    <!--
+    <script>window._epn = {campaign: 5338815131};</script>
+    <script src="https://epnt.ebay.com/static/epn-smart-tools.js"></script>
+    <script data-ad-client="ca-pub-2661815267943239" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    -->
 </head>
 
 <body>
@@ -52,5 +57,16 @@
     </form>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="price_comparison.js"></script>
-</body>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- フッタ広告 -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-2661815267943239"
+         data-ad-slot="4130245026"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script></body>
 </html>
