--- a/price_comparison.html
+++ b/price_comparison.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <TITLE>商品比較サイト</TITLE>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
     <!--
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,23 +19,31 @@
 </head>
 
 <body>
-    <div id="container">
+    <div id="container" class="container">
         <div class="header">いろいろな商品を比較！</div>
         <!-- <p><a href="price_comparison_cart.php" target="_blank" rel="noopener noreferrer">カートを見る</a></p> -->
         <p><a href="price_comparison_cart.php">カートを見る</a></p>
         <!--<form method='post' action=''>-->
-        <form action method="get">
-            <input type='text' id='searchtextbox' placeholder='キーワードで探す' name="search-key">
-            <input id="searchbtn" type="submit" value="Go">
+            <div col-xs-3>
+                <form action method="get">
+            <div class="input-group">
+                <input type='text' id='searchtextbox' class="form-control" placeholder='キーワードで探す' name="search-key">
+                <!--<button class="btn btn-primary">検索</button>-->
+                <span input-group-btn>
+                    <span class="glyphicon glyphicon-search"></span>
+                    <input class="btn btn-primary" id="searchbtn" type="submit" value="Go">
+                </span>
+            </div>
             <div class="select">
                 <div id="shop-select"></div>
                 <select id="order-select" name="order-select"></select>
             </div>
             <!--<input type="hidden" name="kind" value="change_items">-->
         </form>
+            </div>
         <!--</form>-->
         <div id="loading"><img src="img/loading.gif"></div>
-        <div id="item-list" class="flexbox"></div>
+        <div id="item-list" class="row"></div>
         <!--
         <table border="0">
             <tbody id="item-list"></tbody>
@@ -48,7 +57,7 @@
         </div>
         <div id="goods_list"></div>
         <div id="go_cart">
-        <a href="#" class="btn btn-warning btn-sm">お客様情報の入力へ <span class="glyphicon glyphicon-chevron-right"></span></a>
+        <!-- <a href="#" class="btn btn-warning btn-sm">お客様情報の入力へ <span class="glyphicon glyphicon-chevron-right"></span></a> -->
         </div>
     </div>
     
@@ -60,7 +69,7 @@
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- フッタ広告 -->
-    <ins class="adsbygoogle"
+    <ins class="adsbygoogle page-footer"
          style="display:block"
          data-ad-client="ca-pub-2661815267943239"
          data-ad-slot="4130245026"
