--- a/price_comparison.html
+++ b/price_comparison.html
@@ -2,9 +2,20 @@
 <html lang="ja">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144211946-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-144211946-1');
+    </script>
+    
     <meta charset="utf-8">
     <TITLE>商品比較サイト</TITLE>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
     <link rel="stylesheet" href="stylesheet.css">
     <!--
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -31,7 +42,8 @@
                 <!--<button class="btn btn-primary">検索</button>-->
                 <span input-group-btn>
                     <span class="glyphicon glyphicon-search"></span>
-                    <input class="btn btn-primary" id="searchbtn" type="submit" value="Go">
+                    <!--<input class="btn btn-secondary" id="searchbtn" type="submit" value="Go">-->
+                    <button class="btn btn-secondary" id="searchbtn" type="submit"><i class="fas fa-search"></i></button>
                 </span>
             </div>
             <div class="select">
