サイドバー広告

--- a/price_comparison.html
+++ b/price_comparison.html
@@ -13,15 +13,11 @@
     </script>
     
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <TITLE>商品比較サイト</TITLE>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
     <link rel="stylesheet" href="stylesheet.css">
-    <!--
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="Keywords" content="">
-    <meta name="Description" content="">
-    -->
     <!--
     <script>window._epn = {campaign: 5338815131};</script>
     <script src="https://epnt.ebay.com/static/epn-smart-tools.js"></script>
@@ -31,33 +27,45 @@
 
 <body>
     <div id="container" class="container">
-        <div class="header">いろいろな商品を比較！</div>
-        <!-- <p><a href="price_comparison_cart.php" target="_blank" rel="noopener noreferrer">カートを見る</a></p> -->
-        <p><a href="price_comparison_cart.php">カートを見る</a></p>
-        <!--<form method='post' action=''>-->
-        <form action method="get">
-            <div class="input-group">
-                <input type='text' id='searchtextbox' class="form-control" placeholder='キーワードで探す' name="search-key">
-                <!--<button class="btn btn-primary">検索</button>-->
-                <span class="input-group-btn">
-                    <!--<input class="btn btn-secondary" id="searchbtn" type="submit" value="Go">-->
-                    <button class="btn btn-secondary" id="searchbtn" type="submit"><i class="fas fa-search"></i></button>
-                </span>
-            </div>
-            <div class="select">
-                <div id="shop-select"></div>
-                <select id="order-select" name="order-select"></select>
-            </div>
-            <!--<input type="hidden" name="kind" value="change_items">-->
-        </form>
-        <!--</form>-->
-        <div id="loading"><img src="img/loading.gif"></div>
-        <div id="item-list" class="row"></div>
-        <!--
-        <table border="0">
-            <tbody id="item-list"></tbody>
-        </table>
-        -->
+    <div class="row">
+        <div class="col">
+            <div class="header">いろいろな商品を比較！</div>
+            <!-- <p><a href="price_comparison_cart.php" target="_blank" rel="noopener noreferrer">カートを見る</a></p> -->
+            <p><a href="price_comparison_cart.php">カートを見る</a></p>
+            <!--<form method='post' action=''>-->
+            <form action method="get">
+                <div class="input-group">
+                    <input type='text' id='searchtextbox' class="form-control" placeholder='キーワードで探す' name="search-key">
+                    <!--<button class="btn btn-primary">検索</button>-->
+                    <span class="input-group-btn">
+                        <!--<input class="btn btn-secondary" id="searchbtn" type="submit" value="Go">-->
+                        <button class="btn btn-secondary" id="searchbtn" type="submit"><i class="fas fa-search"></i></button>
+                    </span>
+                </div>
+                <div class="select">
+                    <div id="shop-select"></div>
+                    <select id="order-select" name="order-select"></select>
+                </div>
+                <!--<input type="hidden" name="kind" value="change_items">-->
+            </form>
+            <!--</form>-->
+            <div id="loading"><img src="img/loading.gif"></div>
+            <div id="item-list" class="row"></div>
+        </div>
+
+        <div class="col-3">
+        <div class="sidebar_fixed">
+            <!-- サイドバー広告 -->
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-client="ca-pub-2661815267943239"
+                data-ad-slot="9624100506"
+                data-ad-format="auto"
+                data-full-width-responsive="true"></ins>
+        </div>
+        </div>
+
+    </div>
     </div>
     <!-- カートの中身と合計 -->
     <div id="cart_detail">
@@ -77,16 +85,10 @@
     <script src="price_comparison.js"></script>
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- フッタ広告 -->
-    <ins class="adsbygoogle page-footer"
-         style="display:block"
-         data-ad-client="ca-pub-2661815267943239"
-         data-ad-slot="4130245026"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
     <script>
          (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
             crossorigin="anonymous"></script>
