アフィリエイトURL

--- a/price_comparison.html
+++ b/price_comparison.html
@@ -82,6 +82,7 @@
         <input type="hidden" id="data" name="data" value="" />
     </form>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://unpkg.com/infinite-scroll@4/dist/infinite-scroll.pkgd.min.js"></script>
     <script src="price_comparison.js"></script>
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
