--- a/price_comparison.html
+++ b/price_comparison.html
@@ -14,7 +14,7 @@
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <TITLE>商品比較サイト</TITLE>
+    <TITLE>オープンマーケット！</TITLE>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
     <link rel="stylesheet" href="stylesheet.css">
