--- a/price_comparison_cart.html
+++ b/price_comparison_cart.html
@@ -33,7 +33,7 @@
             <p><a href="price_comparison_delete.php">カートをすべて空に</a></p>
 
             <!-- カートの中身と合計 -->
-            <div id="cart_detail">
+            <div id="cart_detail" v-cloak>
                 <div id="goods_list">
                     <table style="text-align:center" id="items">
                         <tr><th>商品</th><th>個数</th><th>数量</th><th>削除ボタン</th></tr>
